--- a/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
+++ b/H1EMU-Launcher/Language/StringResources.bg-BG.xaml
@@ -160,4 +160,5 @@
     <system:String x:Key="item167">ПРОДЪЛЖИ</system:String>
     <system:String x:Key="item168">Сървърът не се стартира, опитайте отново и ако проблемът продължава, моля, докладвайте го.</system:String>
     <system:String x:Key="item169">• Стартер, направен от @Eavilaswayce •</system:String>
+    <system:String x:Key="item170">Financial contributors</system:String>
 </ResourceDictionary>
