--- a/H1EMU-Launcher/Language/StringResources.pl-PL.xaml
+++ b/H1EMU-Launcher/Language/StringResources.pl-PL.xaml
@@ -160,5 +160,5 @@
     <system:String x:Key="item167">DALEJ</system:String>
     <system:String x:Key="item168">Nie udało się uruchomić serwera, spróbuj ponownie, a jeśli problem będzie się powtarzał, zgłoś go.</system:String>
     <system:String x:Key="item169">• Launcher stworzony przez @Eavilaswayce •</system:String>
-    <system:String x:Key="item170">Financial contributors</system:String>
+    <system:String x:Key="item170">Współtwórcy Finansowi</system:String>
 </ResourceDictionary>
