--- a/H1EMU-Launcher/Language/StringResources.zh-cn.xaml
+++ b/H1EMU-Launcher/Language/StringResources.zh-cn.xaml
@@ -160,5 +160,5 @@
     <system:String x:Key="item167">继续使用</system:String>
     <system:String x:Key="item168">服务器无法启动，请重试，如果问题仍然存在，请报告。</system:String>
     <system:String x:Key="item169">• 启动器由@Eavilaswayce 制作 •</system:String>
-    <system:String x:Key="item170">Financial contributors</system:String>
+    <system:String x:Key="item170">财务贡献者</system:String>
 </ResourceDictionary>
