--- a/H1EMU-Launcher/Language/StringResources.de-DE.xaml
+++ b/H1EMU-Launcher/Language/StringResources.de-DE.xaml
@@ -160,5 +160,5 @@
     <system:String x:Key="item167">FORTSETZEN</system:String>
     <system:String x:Key="item168">Der Server konnte nicht gestartet werden, versuchen Sie es erneut und wenn das Problem weiterhin besteht, melden Sie es bitte.</system:String>
     <system:String x:Key="item169">• Launcher von @Eavilaswayce •</system:String>
-    <system:String x:Key="item170">Financial contributors</system:String>
+    <system:String x:Key="item170">Finanzielle Beitragszahler</system:String>
 </ResourceDictionary>
