--- a/H1EMU-Launcher/Language/StringResources.hr.xaml
+++ b/H1EMU-Launcher/Language/StringResources.hr.xaml
@@ -158,7 +158,7 @@
     <system:String x:Key="item165">pokretati najnoviju Steam verziju igre ili bilo koju drugu verziju koja nije navedena iz razloga što ju neće te moći pokrenuti.</system:String>
     <system:String x:Key="item166">Hvala i uživajte!</system:String>
     <system:String x:Key="item167">NASTAVI</system:String>
-    <system:String x:Key="item168">Poslužitelj se nije uspio pokrenuti, pokušajte ponovo. Ako problem potraje, prijavite ga.</system:String>
+    <system:String x:Key="item168">Poslužitelj se nije uspio pokrenuti, pokušajte ponovo. Ako problem potraje, prijavite ga.\n\nPonovno instaliranje datoteka poslužitelja može riješiti ovaj problem.</system:String>
     <system:String x:Key="item169">• Launcher izradio @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Financijski Suradnici</system:String>
 </ResourceDictionary>
