--- a/H1EMU-Launcher/Language/StringResources.zh-cn.xaml
+++ b/H1EMU-Launcher/Language/StringResources.zh-cn.xaml
@@ -158,7 +158,7 @@
     <system:String x:Key="item165">使用steam下载最新或者不是上述版本的游戏，因为除以上两个版本外其他版本不能正常使用。</system:String>
     <system:String x:Key="item166">再次感谢您的关注，祝游戏愉快！</system:String>
     <system:String x:Key="item167">继续使用</system:String>
-    <system:String x:Key="item168">服务器无法启动，请重试，如果问题仍然存在，请报告。</system:String>
+    <system:String x:Key="item168">服务器无法启动，请重试，如果问题仍然存在，请报告。\n\n重新安装服务器文件可能会解决此问题。</system:String>
     <system:String x:Key="item169">• 启动器由@Eavilaswayce 制作 •</system:String>
     <system:String x:Key="item170">财务贡献者</system:String>
 </ResourceDictionary>
