--- a/H1EMU-Launcher/Language/StringResources.de-DE.xaml
+++ b/H1EMU-Launcher/Language/StringResources.de-DE.xaml
@@ -158,7 +158,7 @@
     <system:String x:Key="item165">die neueste Steam Version des Spiels oder eine andere Version, die oben nicht erwähnt wurde, da sie nicht funktioniert.</system:String>
     <system:String x:Key="item166">Vielen Dank und viel Spaß!</system:String>
     <system:String x:Key="item167">FORTSETZEN</system:String>
-    <system:String x:Key="item168">Der Server konnte nicht gestartet werden, versuchen Sie es erneut und wenn das Problem weiterhin besteht, melden Sie es bitte.</system:String>
+    <system:String x:Key="item168">Der Server konnte nicht gestartet werden, versuchen Sie es erneut und wenn das Problem weiterhin besteht, melden Sie es bitte.\n\nEine Neuinstallation von Serverdateien kann dieses Problem beheben.</system:String>
     <system:String x:Key="item169">• Launcher von @Eavilaswayce •</system:String>
     <system:String x:Key="item170">Finanzielle Beitragszahler</system:String>
 </ResourceDictionary>
